# solana-sim-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_vault.json
src/simengine/: __init__.py  cli.py
src/simengine/adapters/: __init__.py  base.py  jupiter.py
src/simengine/adversarial/: __init__.py  agent.py  detector.py  playbook.py  poc.py
src/simengine/analysis/: __init__.py  idl_parser.py  invariants.py  models.py  program_loader.py  state_graph.py
src/simengine/core/: __init__.py  simulator.py  surfpool.py  tx_analyzer.py  tx_builder.py
src/simengine/fuzzing/: __init__.py  coverage.py  generator.py  models.py  runner.py
src/simengine/parser/: __init__.py  prompt_parser.py  token_registry.py
src/simengine/state/: __init__.py  snapshot.py
